<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#00ffff">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toTopOf="@id/button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="Phiếu khảo sát cá nhân"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/textView_name"
            />
    <TextView
        android:id="@+id/textView_address"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="0dp"
        android:text="@string/textViewDia_chi"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_so_dien_thoai" />

        <EditText
            android:id="@+id/textAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:lines="1"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_address" />
        <TextView
            android:id="@+id/textView_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="0dp"
            android:text="@string/textView_email"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_gender" />

        <EditText
            android:id="@+id/text_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:lines="1"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf = "@id/textView_email"/>
        <TextView
            android:id="@+id/textView_so_dien_thoai"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="0dp"
            android:text="@string/textView_so_dien_thoai"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_email" />

        <EditText
            android:id="@+id/text_so_dien_thoai"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:lines="1"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_so_dien_thoai" />

        <TextView
        android:id="@+id/textView_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="0dp"
        android:text="@string/textViewTen"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/textView_gender"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="0dp"
        android:text="@string/textViewGioi_tinh"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textAge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.812" />

    <TextView
        android:id="@+id/textView_age"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="0dp"
        android:text="@string/textViewTuoi"
        android:textStyle="bold"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.261" />
    <EditText
        android:id="@+id/textAge"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_age"
        android:inputType="number"
        android:lines="1"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView_hobby"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="0dp"
        android:text="@string/textViewSo_thich"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textAddress"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:id="@+id/textHobby"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_hobby"
        android:inputType="text"
        android:lines="1"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView_gpa"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="0dp"
        android:text="@string/textViewGPA"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textHobby"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.66" />

    <EditText
        android:id="@+id/textGPA"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textStyle="bold"
        android:inputType="number"
        android:lines="1"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_gpa" />

    <EditText

        android:id="@+id/textName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="text"
        android:lines="1"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_name"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/radio_gender"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_gender"

        android:orientation="horizontal">



            <RadioButton
                android:id="@+id/rb1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Male" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Female" />

        <RadioButton
            android:id="@+id/rb3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Another" />


    </RadioGroup>
        <TextView
            android:id="@+id/textView_mon_an"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/text_cham_ngon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/textView_mon_an"/>
        <EditText

            android:id="@+id/text_mon_an"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:lines="1"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_mon_an"
            app:layout_constraintVertical_bias="0.0" />
        <TextView
            android:id="@+id/textView_cham_ngon"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/textGPA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/textView_cham_ngon"/>
        <EditText

            android:id="@+id/text_cham_ngon"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:lines="1"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_cham_ngon"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="694dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

